Programación/AppJavaFx/ITV_CITAS/src/main/kotlin/com/example/itv_citas/errors/EmployeeError.kt
package com.example.itv_citas.errors

sealed class EmployeeError(val message: String) {
    object EmployeeNotFound: EmployeeError("ERROR: Employee not found")
}